<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_lable">Title</string>
    <string name="crime_details_lable">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crime_image_lable">Image</string>
    <string name="crimes_title">Crimes</string>
    <string name="date_picker_title">Date of crime: </string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something</string>
    <string name="delete_crime">Delete</string>
    <string name="no_crime_data">No Crime Data Right Now</string>
    <string name="no_camera">Your device not support camera!</string>
</resources>
